# MacroPlacement

CodeElements/MXP_Refiner/: .coverage  .gitignore  GEMINI.md  GEMINI.md.bak  data_preview.html  pyproject.toml  requirements.txt  restorer_model.pth  run_training.ps1  run_training.sh  verify_model.py
CodeElements/MXP_Refiner/conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
CodeElements/MXP_Refiner/conductor/tracks/dataset_viewer_20260102/: metadata.json  plan.md  spec.md
CodeElements/MXP_Refiner/conductor/tracks/fine_tuning_20260101/: metadata.json  plan.md  spec.md
CodeElements/MXP_Refiner/conductor/tracks/graph_diffusion_20260103/: metadata.json  plan.md  spec.md
CodeElements/MXP_Refiner/conductor/tracks/restoration_model_20251229/: metadata.json  plan.md  spec.md
CodeElements/MXP_Refiner/conductor/tracks/synthetic_data_20251228/: metadata.json  plan.md  spec.md
CodeElements/MXP_Refiner/src/: config.py  data_builder.py  dataset.py  diffusion.py  env.py  evaluate_model.py  generate_dataset.py  generate_val_results.py  generator.py  geometry.py  inspect_data.py  main.py  model.py  restore_floorplan.py  train.py  train_restorer.py  utils.py  viewer_server.py  visualizer.py
CodeElements/MXP_Refiner/src/static/js/: app.js  visualizer.js
CodeElements/MXP_Refiner/src/templates/: viewer.html
CodeElements/MXP_Refiner/tests/: check_gradients.py  check_scheduler.py  test_config.py  test_convergence.py  test_data_pipeline.py  test_dataset.py  test_diffusion.py  test_energy.py  test_evaluate_model.py  test_generate_val_results.py  test_generator.py  test_generator_mixed.py  test_geometry.py  test_model_unet.py  test_overfit.py  test_restorer.py  test_train_metrics.py  test_viewer_server.py
