[project]
name = "mxp-refiner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "astunparse==1.6.3",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==1.3.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "dm-tree==0.1.9",
    "farama-notifications==0.0.4",
    "filelock==3.20.0",
    "flask==3.1.2",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "gast==0.7.0",
    "gin-config==0.5.0",
    "google-pasta==0.2.0",
    "grpcio==1.76.0",
    "gymnasium==1.2.3",
    "h5py==3.15.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "keras==3.13.0",
    "kiwisolver==1.4.9",
    "libclang==18.1.1",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "namex==0.1.0",
    "networkx==3.6.1",
    "numpy==2.4.0",
    "opt-einsum==3.4.0",
    "optree==0.18.0",
    "packaging==25.0",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "propcache==0.4.1",
    "protobuf==6.33.2",
    "psutil==7.2.0",
    "pygments==2.19.2",
    "pyparsing==3.3.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "rich==14.2.0",
    "scipy==1.16.3",
    "setuptools==70.2.0",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "sympy==1.13.1",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.2.0",
    "tf-agents-nightly==0.6.0.dev20200720",
    "tfp-nightly==0.26.0.dev20251225",
    "torch>=2.6.0",
    "torch-geometric==2.7.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "urllib3==2.6.2",
    "werkzeug==3.1.4",
    "wheel==0.45.1",
    "wrapt==2.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "py-spy>=0.4.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]
